--- a/index.html
+++ b/index.html
@@ -1,47 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  Your Result
-  76
-  of 100
+    <link rel="stylesheet" href="output.css" />
+    <title>Frontend Mentor | Results summary component</title>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="result-container">
+        <div>Your Result</div>
+        <div class="result-score-container">
+          <div class="final-score">76</div>
+          <div class="score-out-of">of 100</div>
+        </div>
+        <div class="result-keyword">Great</div>
+        <div class="result-description">
+          <p>
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
+      </div>
+      <div class="summary-container">
+        <p class="summary-title">Summary</p>
+        <div class="categories-list-container">
+          <ul>
+            <div class="category-bar-container reaction">
+              <img
+                alt="lightning bolt symbol"
+                src="assets/images/icon-reaction.svg"
+              />
+              <p>Reaction</p>
+              <div class="category-score">80 / 100</div>
+            </div>
+            <div class="category-bar-container memory">
+              <img alt="clock symbol" src="assets/images/icon-memory.svg" />
+              <p>Memory</p>
+              <div class="category-score">92 / 100</div>
+            </div>
+            <div class="category-bar-container verbal">
+              <img
+                alt="speech bubble symbol"
+                src="assets/images/icon-verbal.svg"
+              />
+              <p>Verbal</p>
+              <div class="category-score">61 / 100</div>
+            </div>
+            <div class="category-bar-container visual">
+              <img alt="eyeball symbol" src="assets/images/icon-visual.svg" />
+              <p>Visual</p>
+              <div class="category-score">72 / 100</div>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <!-- 76 of 100 Great You scored higher than 65% of the people who
+      have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal
+      61 / 100 Visual 72 / 100 Continue -->
+    </main>
 
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/jadenenz">Jaden Enzbrenner</a>.
+      </div>
+    </footer>
+  </body>
 </html>
