Added responsive layout

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 </div>
               </div>
             </ul>
+            <div class="continue-button">Continue</div>
           </div>
         </div>
         <!-- 76 of 100 Great You scored higher than 65% of the people who
